Corrected css to prevent unnecessary scrolling/overflow on the main page.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -215,7 +215,6 @@ div.central {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    height: 100%;
 }
 
 .resume-button {
